<resources>
    <string name="app_name">Arch App</string>

    <string name="api_key">AIzaSyDL5lVBeuFRnfVf8oSdVcH8kRIYnlVRvOs</string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="or_login"><u>or login with</u></string>
    <string name="hello_blank_fragment">Home Seeker fragment</string>
    <string name="fav_fragment">Fav  fragment</string>
    <string name="title_activity_job_deatils">JobDeatilsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="empty_value">empty</string>
    <string name="title_favorite">Favourite</string>
    <string name="count">10</string>
    <string name="count_update">20</string>
    <string name="title_chat">Chat</string>
    <string name="previous">Previous</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv1">SQR code will get generated for you and you are good to accept payments from customers</string>
    <string name="third_step">send audio and notes and in return get positive notes from customer</string>
    <string name="otp_text">Please enter the 6-digit code sent to your phone number +91XXXXXX7890 for verification.</string>
    <string name="sign_up"><u>SIGN UP</u></string>
    <string name="login">Login</string>
    <string name="arch">Arch</string>
    <string name="please_enter_your_detail_to_login">Please enter your detail to login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_pass">forgot password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="registration">Registration</string>
    <string name="please_enter_your_detail_to_registration">Please enter your detail to Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="please_enter_your_listing_detail">Please enter your listing detail</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="select">Select</string>
    <string name="description">Description</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="old_password">Old password</string>
    <string name="please_enter_your_account_email_to_reset_your_password">Please enter your account email to reset your password</string>
    <string name="verify_to_reset_password">Verify to reset password</string>
    <string name="re_send_code">Re-send code</string>
    <string name="log_in">Log in</string>
    <string name="sign_up2">Sign up</string>
    <string name="forgot_password2">Forgot password</string>
    <string name="enter_the_verification_code_we_just_sent_on_your_email_address">Enter the verification code we just sent on your email address</string>
    <string name="verify">Verify</string>
    <string name="didn_t_you_receive_any_code">Didn\'t you receive any code!</string>
    <string name="reset_password">Reset password</string>
    <string name="please_enter_new_password_different_from_the_older_password">Please enter new password different from the older password</string>
    <string name="new_password">New password</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="name">Name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="rectangle">Rectangle</string>
    <string name="line">Line</string>
    <string name="polygon">Polygon</string>
    <string name="circle">Circle</string>
    <string name="marker">Marker</string>
    <string name="hand">Hand</string>
    <string name="add_listing">Add Listing</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up3">Sign Up</string>
    <string name="or_sign_in_with">or Sign In with</string>
    <string name="sign_in_with_x">Sign in with Twitter</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of service and Privacy Policy</string>
    <string name="john_doe">John Doe</string>
    <string name="events">Events</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="saved_public_maps">Saved Public Maps</string>
    <string name="johndoe">JohnDoe</string>
    <string name="number_of_dives">Number of Dives</string>
    <string name="_20">20</string>
    <string name="maps_posted_online">Maps Posted Online</string>
    <string name="_24">24</string>
    <string name="maps_likes_received">Maps Likes Received</string>
    <string name="_456_likes">456 likes</string>
    <string name="events_attended">Events Attended</string>
    <string name="successful_referrals">Successful Referrals</string>
    <string name="you_have_2_free_months_remaining_from_referrals">You have 2 free months remaining from referrals</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="certifications">Certifications</string>
    <string name="dive_history">Dive History</string>
    <string name="shop">Shop</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="refer_friends_get_it_free">Refer Friends.\nGet It Free.</string>
    <string name="when_a_friend_you_invite_goes_premium_your_next_month_will_be_free">When a friend you invite goes Premium, your next month will be free</string>
    <string name="monthly_plan">Monthly \nPlan</string>
    <string name="_3_99_month">$3.99/month</string>
    <string name="_3_99">$3.99</string>
    <string name="pay_as_you_go_cancel_anytime_3_99_per_month_47_88_per_year">Pay as you go - cancel anytime \n$3.99 per month ($47.88 per year)</string>
    <string name="group_plans">Group Plans</string>
    <string name="cancel_payment_plan">Cancel Payment Plan</string>
    <string name="are_you_sure_you_want_to_delete_this_map">Are you sure \nyou want to delete this map</string>
    <string name="change_password">Change password</string>
    <string name="private_user_created_maps">Private User Created Maps</string>
    <string name="settings">Settings</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="tell_us_about_your_self">Tell us about your self</string>
    <string name="account_specific_details">Account Specific Details</string>
    <string name="is_the_group_open_to_new_members">Is the group open to new members?</string>
    <string name="review_your_information">Review Your Information</string>
    <string name="business_name">Business Name</string>
    <string name="business_type">Business Type</string>
    <string name="website">Website</string>
    <string name="social_media">Social Media</string>
    <string name="service_offered">Service Offered</string>
    <string name="address">Address</string>
    <string name="hours_of_operation">Hours of Operation</string>
    <string name="hosted_events">Hosted Events</string>
    <string name="group_name">Group Name</string>
    <string name="contact_email">Contact Email</string>
</resources>