<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/location">

    <fragment
        android:id="@+id/location"
        android:name="com.tech.arch.ui.home_screens.location.LocationFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/addListing"
        android:name="com.tech.arch.ui.home_screens.add_listing.AddListingFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_add_listing" />

    <fragment
        android:id="@+id/profile"
        android:name="com.tech.arch.ui.home_screens.profile_module.ProfileFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/event"
        android:name="com.tech.arch.ui.home_screens.event_fragment.EventFragment"
        android:label="Event"
        tools:layout="@layout/fragment_event"/>

    <fragment
        android:id="@+id/shop"
        android:name="com.tech.arch.ui.home_screens.shop_module.ShopFragment"
        android:label="Shop"
        tools:layout="@layout/fragment_shop"/>
</navigation>